# rust-dockerfile-comparison

./: .dockerfileignore  Cargo.toml  Dockerfile.base  Dockerfile.buildkit-base  Dockerfile.buildkit-sccache  Dockerfile.cargochef  Dockerfile.echo  Makefile  Readme.md
src/: main.rs
testsrc/after/: main.rs
