[package]
name = "app"
version = "0.1.0"
authors = ["mkazutaka <paper.sheet.kami@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO: UPDATE if rocket 0.5.0 released
rocket = { git = "https://github.com/SergioBenitez/Rocket" }